# structit

./: .gitignore  .gitlab-ci.yml  .pre-commit-config.yaml  CHANGELOG.md  CONTRIBUTING.md  LICENSE  README.md  SPEC.md  issue.md  pyproject.toml  requirements.txt  workdivision.md
llama_cpp/: __init__.py
src/: database.py  detector.py  document_loaders.py  document_pipeline.py  extractor.py  main.py  ocr.py  pipeline.py  preprocess.py  schemas.py  slm.py  streamlit_app.py  structurer.py  text_normalizer.py  vlm.py
src/llama_cpp/: __init__.py
src/pixstruct.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt  top_level.txt
src/static/: index.html  manifest.json  sw.js
tests/: test_document_pipeline.py  test_pipeline.py
