[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "pixstruct"
version = "0.1.0"
description = "Offline bill and receipt intelligence — CPU only"
license = { text = "GPL-3.0-or-later" }
requires-python = ">=3.11"
dependencies = [
    "pytesseract>=0.3.10",
    "opencv-python-headless>=4.9",
    "Pillow>=10.0",
    "llama-cpp-python>=0.2.56",
    "pydantic>=2.6",
    "fastapi>=0.111",
    "uvicorn[standard]>=0.29",
    "python-multipart>=0.0.9",
    "jinja2>=3.1",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-cov>=5.0",
    "ruff>=0.4",
    "mypy>=1.9",
    "bandit>=1.7",
    "pip-audit>=2.7",
    "pre-commit>=3.7",
]

[project.scripts]
pixstruct = "pixstruct.cli:main"

[tool.ruff]
line-length = 88
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I"]

[tool.mypy]
python_version = "3.11"
strict = false
ignore_missing_imports = true

[tool.pytest.ini_options]
testpaths = ["tests"]