[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "structit"
version = "0.2.0"
description = "Offline CPU-first document-to-JSON extraction"
license = { text = "GPL-3.0-or-later" }
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.111",
    "jinja2>=3.1",
    "llama-cpp-python>=0.2.56",
    "opencv-python-headless>=4.9",
    "pandas>=2.2",
    "Pillow>=10.0",
    "pydantic>=2.6",
    "pymupdf>=1.24",
    "pypdfium2>=4.30",
    "pytesseract>=0.3.10",
    "python-docx>=1.1",
    "python-multipart>=0.0.9",
    "streamlit>=1.36",
    "uvicorn[standard]>=0.29",
]

[project.optional-dependencies]
dev = [
    "bandit>=1.7",
    "black>=24.4",
    "coverage>=7.5",
    "detect-secrets>=1.5",
    "isort>=5.13",
    "mypy>=1.9",
    "pymarkdownlnt>=0.9",
    "pytest>=8.0",
    "pytest-cov>=5.0",
    "ruff>=0.4",
    "safety>=3.2",
]

[project.scripts]
structit-api = "src.main:serve"

[tool.black]
line-length = 88
target-version = ["py311"]

[tool.isort]
profile = "black"
line_length = 88

[tool.ruff]
line-length = 88
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "B", "UP"]
ignore = ["B008"]

[tool.mypy]
python_version = "3.11"
strict = false
ignore_missing_imports = true

[tool.pytest.ini_options]
testpaths = ["tests"]

[tool.coverage.run]
source = ["src"]

[tool.coverage.report]
fail_under = 60
show_missing = true
